Fix "have long covid" line wrap

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ input[type="file"] {
     text-decoration-line: underline;
 }
 
+.americans-have-text { 
+    max-width: 200px;
+}
+
 .custom-file-upload {
     display: inline-block;
     font-weight: 500;
@@ -391,6 +395,12 @@ body {
 
     .secondary-title-text {
         text-align: center;
+    }
+}
+
+@media screen and (min-width: 410px) { 
+    .americans-have-text { 
+        max-width: 327px;
     }
 }
 
